@@ -1,5 +1,12 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*07/01/01:
+   * Happy New Year!
+   * Fix data type of data passed to set _NET_FRAME_EXTENTS (Simon)
+     (sf.net #1621980)
+     Similar fix for gnome current workspace... remember that XA_CARDINAL
+     "32-bit" type is actually a "long array" argument (=64bit on 64 systems)
+     Ewmh.cc Gnome.cc
 *06/12/28:
    * Don't add 2 pixels to a specified toolbar height, bug #1528646 (Mark)
      Toolbar.cc
